Fixed pagination. Fixed mobile alignments. Fixed share icons for mobile devices.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -86,10 +86,10 @@
         background-image:url(/images/black-dwi.svg);
       }
       @include media($micro) {
-        margin-left: 10px;
+        margin-left: 20px;
       }        
       @include media($small) {
-        margin-left: 10px;
+        margin-left: 20px;
       }
       @include media($medium) {
         margin-left: 5px;
@@ -160,7 +160,7 @@
               color: white; 
             }   
           }
-          padding-right: 20px;
+          padding-right: 10px;
         }
       }
       &.floated{float: right;}
@@ -254,7 +254,7 @@
 // --------------------------------------------------
 
 #page-wrapper {
-  padding: 0 $gutter; // add white space for smaller screens
+  padding: 0 $gutter*0.35; // add white space for smaller screens
   @include size(100% 100%);
   -webkit-overflow-scrolling: touch;
   z-index: 2;
@@ -620,13 +620,20 @@
 // --------------------------------------------------
 
 .pagination {
+  padding-left: $gutter*0.65;
   span { 
+    color: #CFCFCF;
+    &:hover { color: #000; }
     margin-right: 2px;
   }
   em {
+    font-style: normal;
     margin-right: 2px;
   }
   a {
+    color: #CFCFCF;
+    text-decoration: none;
+    &:hover { color: #000; }
     margin-right: 2px;
   }
 }
