--- a/_sass/_post-summary.scss
+++ b/_sass/_post-summary.scss
@@ -32,6 +32,48 @@ article{
       color: #333333;
 }
 
+@mixin post-meta {
+
+  .entry-date-icon {
+    display:inline-block;
+    margin: auto 0px auto auto;
+    width: 11px;
+    height: 11px;
+    text-align: center;
+  }
+  .entry-date {
+    display:inline-block;
+    @include font-size(11);
+    color: #808386;
+    margin-right: 10px;
+    margin-bottom: 0px;
+  }
+  .comment-count-icon {
+    display:inline-block;
+    margin: auto 0px auto auto;
+    width: 11px;
+    height: 11px;
+  }
+  .comment-count {
+    display:inline-block;
+    @include font-size(11);
+    color: #808386;
+    margin: auto 0px auto auto;
+  }
+  .comment-like-icon {
+    display:inline-block;
+    margin: auto 0px auto auto;
+    width: 11px;
+    height: 11px;
+  }
+  .comment-like {
+    display:inline-block;
+    @include font-size(11);
+    color: #808386;
+    margin: auto 0px auto auto;
+  }
+}
+
 .tile {
 
     margin-bottom: $gutter;
@@ -82,48 +124,10 @@ article{
     .post-meta {
       overflow:auto;
       position:relative;
-      
-      .entry-date-icon {
-        display:inline-block;
-        margin: auto 0px auto auto;
-        width: 11px;
-        height: 11px;
-        text-align: center;
-      }
-      .entry-date {
-        display:inline-block;
-        @include font-size(11);
-        color: #808386;
-        margin-right: 10px;
-        //margin: auto 10px auto auto;
-        margin-bottom: 0px;
-      }
-      .comment-count-icon {
-        display:inline-block;
-        margin: auto 0px auto auto;
-        width: 11px;
-        height: 11px;
-      }
-      .comment-count {
-        display:inline-block;
-        @include font-size(11);
-        color: #808386;
-        margin: auto 0px auto auto;
-      }
-      .comment-like-icon {
-        display:inline-block;
-        margin: auto 0px auto auto;
-        width: 11px;
-        height: 11px;
-      }
-      .comment-like {
-        display:inline-block;
-        @include font-size(11);
-        color: #808386;
-        margin: auto 0px auto auto;
-      }
+      @include post-meta;
     }
-  }
+
+}
 
 .share-title {
   margin-left: 16px;
@@ -151,7 +155,7 @@ article{
       &.wide{
         @include span-columns(11);        
       }
-      //@include omega();
+
       .post-title {
         @include post-title;
         text-decoration: none;
@@ -165,26 +169,51 @@ article{
         a {
           text-decoration: none;
         }
-    }
+      }
+      .post-meta {
+        @include span-columns(11);
+        @include post-meta;        
+        padding-top: 0.5em;
+        padding-bottom: 0.5em;
+      }
       .post-category {
         @include post-category;
+        padding-top: 0.5em;
+        padding-bottom: 0.5em;
         margin: 0;
         padding: 0;
         margin-top: -6px; //pushes text to div top hedge
       }
       .share-this {
-        .inline-btn{
+        @include span-columns(11);
+        .inline-btn {
           a {
             .base { 
               opacity: 0.3;
             }
             &:hover .base { opacity: 1; }
           }
+        }        
+        @include media($micro) {
+          .inline-btn { 
+            a { div { span { display: none; } } }
+            i {
+              width: 10px;
+              &.fa-facebook { &:before { margin-left: 1px; } }
+            }
+          }
         }
-      }
-      .share-date {
-        @include font-size(11);
-        color: #808386;
+        @include media($small) {
+          .inline-btn { 
+            a { div { span { display: none; } } }
+            i {
+              width: 10px;
+              &.fa-facebook { &:before { margin-left: 1px; } }
+            }
+          }
+        }
+
+
       }
     }
   }
